@@ -1,5 +1,5 @@
 
-R Under development (unstable) (2021-11-30 r81267) -- "Unsuffered Consequences"
+R Under development (unstable) (2021-12-02 r81280) -- "Unsuffered Consequences"
 Copyright (C) 2021 The R Foundation for Statistical Computing
 Platform: x86_64-pc-linux-gnu (64-bit)
 
@@ -2486,7 +2486,7 @@ In doTryCatch(return(expr), name, parentenv, handler) :
 > if(!inherits(res, 'try-error'))
 +    report({if(is.vector(x)) { cat('IS: ');all.equal(x, res, tolerance=0)
 +    } else   !isall.equal(x, res)})
-IS: [1] TRUE
+[1] TRUE
 > res <- try(as.stepfun( x ), silent = TRUE)
 > if(!inherits(res, 'try-error'))
 +    report({if(is.stepfun(x)) { cat('IS: ');all.equal(x, res, tolerance=0)
