@@ -144,6 +144,14 @@
       \item \code{reorder()} gets an argument \code{decreasing} which it
       passes to \code{sort()} for level creation; based on the wish and
       patch by Thomas Soeiro in \PR{18243}.
+
+      %% possibly for  \subsection{SIGNIFICANT USER-VISIBLE CHANGES}
+      \item \code{as.vector()} and \code{is.vector()} have been changed in
+      order to fulfill \code{is.vector(as.vector(.))} more often when the
+      argument is of type \code{list} or \code{expression}.
+      To this end, \code{as.vector} got a \code{data.frame} method which
+      now returns a simple list (also obeying a long standing \sQuote{FIXME}
+      to enable \code{as.vector(<data.frame>, mode="list")}.
     }
   }
 
